--- a/pagina web (micro empresa).html
+++ b/pagina web (micro empresa).html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style_Bzar</title>
+    <title>BT - Inicio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="head">
         <div class="logo">
-            <a href="BussisnessTenager.jpg">Logo</a>
+            <img src="BussisnessTenager.jpg">
         </div>
         <nav class="navbar">
             <a href="#">Inicio</a>
