Update pagina web (micro empresa).html

--- a/pagina web (micro empresa).html
+++ b/pagina web (micro empresa).html
@@ -10,7 +10,7 @@
 <body>
     <div class="head">
         <div class="logo">
-            <img src="BussisnessTenager.jpg">
+            <img src="BussisnessTenager.jpg" height="20px" >
         </div>
         <nav class="navbar">
             <a href="#">Inicio</a>
